--- a/style.css
+++ b/style.css
@@ -28,19 +28,35 @@ body {
     display: grid;
     grid-template-rows: 3rem 3rem;
     justify-content: center;
-    gap: 2rem;
+    gap: 3rem;
 }
 
 .nodes {
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
-    margin: 0 2rem 0 2rem;
+    margin: 0 1rem 0 1rem;
 }
 
 h1{
-    margin: 0 auto auto auto;
+    margin: 0rem auto auto auto;
     padding: 0.25rem 0.25rem 0rem 0.25rem;
     background: #fff;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
+}
+
+.entry {
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+#new-node-entry {
+    font-size: 2rem;
+    width: 5rem;
+}
+
+#insert-button {
+    font-size: 1.5rem;
 }
